<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/catalogue"
        android:title="@string/catalogue"
        android:icon="@drawable/movies"/>

    <item
        android:id="@+id/search"
        android:title="@string/search_catalogue"
        android:icon="@drawable/search"/>

    <item
        android:id="@+id/account"
        android:title="@string/my_account"
        android:icon="@drawable/account"/>

    <item
        android:id="@+id/weather"
        android:title="@string/weather"
        android:icon="@drawable/weather"/>

    <item
        android:id="@+id/about"
        android:title="@string/about_us"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/privacy"
        android:title="@string/privacy"
        android:icon="@drawable/privacy"/>

    <item
        android:id="@+id/contact"
        android:title="@string/contact_us"
        android:icon="@drawable/contact"/>

</menu>